Added logo image to Blog-One page that I hope to include on all of my pages soon

--- a/content/Blog-One.njk
+++ b/content/Blog-One.njk
@@ -7,3 +7,7 @@ numberOfLatestPostsToShow: 3
 ---
 
 <h1> Welcome to my Blog-One page </h1>
+
+<p> This is my logo that I would like to include on each page </p>
+
+{% image "./LogoMC.png", "A Blog-One Logo" %}
