--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,10 +1,23 @@
 ---
-layout: layouts/home.njk
-eleventyNavigation:
-  key: Archive
-  order: 2
+title: "Eleventy Portfolio"
+layout: "base.njk"
 ---
-<h1>Archive</h1>
 
-{% set postslist = collections.posts %}
-{% include "postslist.njk" %}
+<h2 class="heading--main text-center">Want to get in touch?</h2>
+<p class="contact__sub-heading text-center">I'm always open to new opportunities and projects. </p>
+
+<form class="form" name="contact" action="/success" method="POST" data-netlify="true">
+  <div class="form__section">
+    <label class="form__label" for="yourName">Name</label>
+    <input class="form__input" name="name" type="text" id="yourName" required="true">
+  </div>
+  <div class="form__section">
+    <label class="form__label" for="yourEmail">Email</label>
+    <input class="form__input" name="email" type="email"  id="yourEmail" required="true">
+  </div>
+  <div class="form__section">
+    <label class="form__label" for="message">Message</label>
+    <textarea class="form__input" name="message" id="message" rows="4" required="true"></textarea>
+  </div>
+    <button class="form__button" type="submit">Let's talk</button>
+</form>
