--- a/content/Blog-One.njk
+++ b/content/Blog-One.njk
@@ -1,17 +1,13 @@
 ---
-title: "Eleventy Portfolio"
-layout: "base.njk"
+layout: layouts/home.njk
+eleventyNavigation:
+  key: Blog-One
+  order: 1
+numberOfLatestPostsToShow: 3
 ---
 
-<section class="bio prose">
-  <h2 class="heading--main">My story</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet risus feugiat in ante metus dictum.</p>
- 
-  <p>Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Turpis egestas integer eget aliquet. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Ut lectus arcu bibendum at. Integer enim neque volutpat ac tincidunt.</p>
- 
-  <p>Commodo ullamcorper a lacus vestibulum sed arcu. Et tortor consequat id porta nibh venenatis cras sed. Nulla pharetra diam sit amet nisl. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Nec sagittis aliquam malesuada bibendum.</p>
- 
-  <p>Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Turpis egestas integer eget aliquet. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Ut lectus arcu bibendum at. Integer enim neque volutpat ac tincidunt.</p>
- 
-  <p>Commodo ullamcorper a lacus vestibulum sed arcu. Et tortor consequat id porta nibh venenatis cras sed. Nulla pharetra diam sit amet nisl. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Nec sagittis aliquam malesuada bibendum.</p>
-</section>
+<h1> Welcome to my Blog-One page </h1>
+
+<p> This is my logo that I would like to include on each page </p>
+
+{% image "./LogoMC.png", "A Blog-One Logo" %}
